# Steam_Stats_EDA_Dashboard

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
config/: config_template.py
dashboards/: streamlit_app.py
docs/: project_structure.md
notebooks/: 01_steam_eda.ipynb  dashboard_prep.ipynb
src/data/: data_loader.py
src/visualization/: plots.py
tests/: test_data_loader.py
